fix footer alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -176,3 +176,7 @@ h6 {
 .place-holder-fc {
   color: #8a8a8a;
 }
+
+.find-car-fc {
+  color: #3c3c3c;
+}
